change on index file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <h1>This is a Heading</h1>
   <p>This is a paragraph.</p>
 
+  <h1>This is a secong Heading</h1>
+  <p>This is a second paragraph.</p>
+
+
 </body>
 
 </html>
